hide ads in android, fix gif white background radius too big

--- a/scss/topics/card.view.scss
+++ b/scss/topics/card.view.scss
@@ -74,7 +74,7 @@
         max-width: 100%;
         width:auto!important;
         background-color: #fff;
-        border-radius: 100px;
+        border-radius: 20px;
       }
 
       iframe {
